config-root/namespaces/jx-staging/angular-jx3-example/angular-jx3-example-angular-jx3-example-deploy.yaml
# Source: angular-jx3-example/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-jx3-example-angular-jx3-example
  labels:
    draft: draft-app
    chart: "angular-jx3-example-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: angular-jx3-example-angular-jx3-example
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: angular-jx3-example-angular-jx3-example
    spec:
      serviceAccountName: angular-jx3-example-angular-jx3-example
      containers:
        - name: angular-jx3-example
          image: "gcr.io/domleartechtech/angular-jx3-example:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
