config-root/namespaces/jx-staging/angular-jx3-example/angular-jx3-example-svc.yaml
# Source: angular-jx3-example/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-jx3-example
  labels:
    chart: "angular-jx3-example-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: angular-jx3-example-angular-jx3-example
